# kekka

./: .gitignore  .merlin  .ocp-indent  LICENSE  Makefile  README.md  _oasis  auto-format.el  dune  dune-project  expr.ml  expr.mli  jbuild  kekka.ml  kekka.opam  setup.ml  synonyms.ml
common/: Common.mllib  basicClasses.ml  concreteSyntax.ml  dune  failure.ml  id.ml  jbuild  monadic.ml  name.ml  name_prim.ml  qNameMap.ml  syntax.ml  unique.ml  util.ml
core/: core.ml
heart/: dune  expr.ml  jbuild  kind.ml  type.ml  typeKind.ml  typeVar.ml
kind/: assumption.ml  importMap.ml  inferKind.ml  inner.ml  jbuild  kind.ml  synonym.ml  unify.ml
kindEngine/: assumption.ml  dune  importMap.ml  infer.ml  inferKind.ml  inferMonad.ml  jbuild  kGamma.ml  kGamma.mli  synonym.ml  synonyms.ml  unify.ml
type/: heart.ml  jbuild  operations.ml  type.ml  typeKind.ml  typeOperations.ml  typeVar.ml  unify.ml
typeEngine/: dune  jbuild  typeKind.ml  typeOperations.ml  typeVar.ml  unify.ml
